...
    
    var body: some View {
        ScrollView {
            VStack(spacing: 0) {
                VStack {
                    VStack(alignment: .leading) {
                        Text("Dettaglio operazione")
                            .font(.PAFont.h3)
                            .padding(.vertical, Constants.mediumSpacing)
                        ListItem(
                            title: "DATA e ORA",
                            subtitle: viewModel.transaction.date?.formattedDateTime ?? String.emptyDataPlaceholder,
                            statusType: viewModel.transaction.status.operationStatus,
...
        }
        .background(Color.grey100)
        .toolbarBackground(.visible, for: .navigationBar)
        .dialog(dialogModel: self.buildDeleteDialog(viewModel: self.viewModel, router: self.router, onConfirmDelete: {
            self.viewModel.setCancelledStatus()
            router.pushTo(.thankyouPage(result: ResultModel(
                title: "Operazione annullata",
                subtitle: "L'importo autorizzato è stato riaccreditato sull'iniziativa del cittadino",
                themeType: .success,
                buttons: [
                    ButtonModel(
                        type: .primary,
                        themeType: .success,
                        title: "Continua",
                        icon: .arrowRight,
                        action: {
                            router.pushTo(.receipt(receiptModel: viewModel.getReceiptPdfModel(transaction: viewModel.transaction), networkClient: self.viewModel.networkClient))
                        }
                    )]
            )))
        }),
                isPresenting: $viewModel.showDeleteDialog)
        .dialog(dialogModel: ResultModel(
            title: "Serve la ricevuta?",
            themeType: .light,
            buttons: [
                ButtonModel(
                    type: .primary,
                    themeType: .light,
                    title: "Invia via e-mail",
...
                        showOutro = true
                    }
                ),
                ButtonModel(
                    type: .primaryBordered,
                    themeType: .light,
                    title: "Condividi",
                    icon: .share,
                    iconPosition: .left,
                    action: {
                        viewModel.showReceiptDialog.toggle()
                        generatedPdfReceiptURL = generatePdfReceipt(
                            model: viewModel.getReceiptPdfModel(
...
            if newValue == true {
                presentShare = false
                router.pushTo(
                    .outro(
                        outroModel:
                            OutroModel(
                                title: "Operazione conclusa",
                                subtitle: """
                                        Puoi riemettere la ricevuta in un momento successivo 
                                        dalla sezione ‘Storico operazioni’.
                                        """,
                                actionTitle: "Torna alla home",
                                action: {
                                    router.popToRoot()
                                    appManager.loadHome()
                                }
                            )
                    )
...
        var buttons: [ButtonModel] = []
        
        if viewModel.transaction.isCancellable() {
            buttons.append(ButtonModel(
                type: .primaryBordered,
                themeType: .light,
                title: "Annulla operazione",
                action: {
                    viewModel.confirmTransactionDelete()
                }
            ))
        }
        
        buttons.append(ButtonModel(
            type: .primary,
            themeType: .light,
            title: "Emetti ricevuta",
            action: {
                self.viewModel.showReceiptDialog.toggle()
            }
         ))
        
        return buttons
...
