...
@MainActor
class InitiativesViewModel: BaseVM {
    
    @Published var initiatives: [Initiative] = []
    @Published var isLoading: Bool = false
    @Published var showError: Bool = false
    @Published var loadingStateMessage: String = "Attendi qualche istante"
    
    func loadInitiatives() {
        Task {
            isLoading = true
                        
            do {
...
