...
    case rewarded   = "REWARDED"
    case cancelled  = "CANCELLED"
    
    var description: String {
        switch self {
        case .authorized, .rewarded:
            return "ESEGUITA"
        case .cancelled:
            return "ANNULLATA"
        default:
            return "-"
        }
    }
...
